[gd_scene load_steps=16 format=3 uid="uid://mbh05supgl71"]

[ext_resource type="Script" uid="uid://oisxcn4h6tg2" path="res://scripts/enemy/enemy.gd" id="1_3qycy"]
[ext_resource type="Script" uid="uid://dtahayxqhodpb" path="res://scripts/enemy/states/masters/behavior_healer.gd" id="2_qfkit"]
[ext_resource type="Script" uid="uid://dcobhyh2ydvef" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="3_56fac"]
[ext_resource type="Script" uid="uid://dj3y7t3gdn6bj" path="res://addons/finite_state_machine/scripts/state_machine_state.gd" id="4_n0ngw"]
[ext_resource type="Script" uid="uid://dug1msh1cc714" path="res://scripts/enemy/states/idle_state.gd" id="5_qpvw1"]
[ext_resource type="Script" uid="uid://t3yepo8pmdk" path="res://scripts/enemy/states/chase_state.gd" id="6_ahxdx"]
[ext_resource type="Script" uid="uid://4p7iwa71qh84" path="res://scripts/enemy/states/avoid_state.gd" id="7_a6241"]
[ext_resource type="PackedScene" uid="uid://derh5gmq2d8f8" path="res://scene/utilities/gore/gore_manager.tscn" id="8_0krm7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gjrny"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3t5hi"]
albedo_color = Color(1, 0.0352941, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_67f57"]
material = SubResource("StandardMaterial3D_3t5hi")

[sub_resource type="BoxMesh" id="BoxMesh_f57f6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rqkxg"]
radius = 6.05316

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tucbg"]
transparency = 1
albedo_color = Color(1, 0.901961, 0.34902, 0.12549)
rim_tint = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_2m56k"]
material = SubResource("StandardMaterial3D_tucbg")

[node name="enemy_healer" type="CharacterBody3D" node_paths=PackedStringArray("navigation_agent", "gore_manager") groups=["Enemy"]]
script = ExtResource("1_3qycy")
elite = true
navigation_agent = NodePath("behavior_master/NavigationAgent3D")
gore_manager = NodePath("gore_manager")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gjrny")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_67f57")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.764849, 0, 0, 0, 0.241913, 0, 0, 0, 0.29789, 0, 0.459297, -0.426675)
mesh = SubResource("BoxMesh_f57f6")
skeleton = NodePath("../..")

[node name="Muzzle" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Looker" type="Node3D" parent="."]

[node name="aim_ray" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.427451, 0.635294, 1)
debug_shape_thickness = 5

[node name="behavior_master" type="Node3D" parent="." node_paths=PackedStringArray("master", "state_machine", "aim_node", "attack_timer", "look_ray", "dead_state", "idle_state", "chase_state", "avoid_state")]
script = ExtResource("2_qfkit")
master = NodePath("..")
state_machine = NodePath("FiniteStateMachine")
speed = 5.0
dist_to_chase = 10.0
dist_to_avoid = 5.0
aim_node = NodePath("aimnode")
attack_timer = NodePath("attack_timer")
look_ray = NodePath("../aim_ray")
dead_state = NodePath("FiniteStateMachine/Dead")
idle_state = NodePath("FiniteStateMachine/Idle")
chase_state = NodePath("FiniteStateMachine/Chase")
avoid_state = NodePath("FiniteStateMachine/Avoid")

[node name="FiniteStateMachine" type="Node" parent="behavior_master"]
script = ExtResource("3_56fac")

[node name="Dead" type="Node" parent="behavior_master/FiniteStateMachine"]
script = ExtResource("4_n0ngw")

[node name="Idle" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("5_qpvw1")
behavior = NodePath("../..")

[node name="Chase" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("6_ahxdx")
behavior = NodePath("../..")

[node name="Avoid" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("7_a6241")
behavior = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="behavior_master"]
navigation_layers = 255

[node name="attack_timer" type="Timer" parent="behavior_master"]

[node name="aimnode" type="Node3D" parent="behavior_master"]
top_level = true

[node name="Area3D" type="Area3D" parent="behavior_master"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="behavior_master/Area3D"]
shape = SubResource("CylinderShape3D_rqkxg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="behavior_master/Area3D/CollisionShape3D"]
transform = Transform3D(12.165, 0, 0, 0, 1, 0, 0, 0, 12.165, 0, 0, 0)
mesh = SubResource("CylinderMesh_2m56k")

[node name="heal_timer" type="Timer" parent="behavior_master"]
autostart = true

[node name="gore_manager" parent="." instance=ExtResource("8_0krm7")]

[connection signal="velocity_computed" from="behavior_master/NavigationAgent3D" to="behavior_master" method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="behavior_master/attack_timer" to="behavior_master" method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="behavior_master/Area3D" to="behavior_master" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="behavior_master/Area3D" to="behavior_master" method="_on_area_3d_body_exited"]
[connection signal="timeout" from="behavior_master/heal_timer" to="behavior_master" method="_on_heal_timer_timeout"]
